@@ -1,3 +1,12 @@
+2013-02-15  Theppitak Karoonboonyanan <thep@linux.thai.net>
+
+	Resurrect dist-ctan make target.
+
+	* Makefile.am:
+	  - Revert revision 82 which removed dist-ctan target.
+	    CTAN now requires source and TDS to be uploaded as a single ZIP
+	    again.
+
 2013-01-28  Theppitak Karoonboonyanan <thep@linux.thai.net>
 
 	Switch to XZ tarball compression.
